Add a test suite running with security manager and a policy